--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+.sticky-top-2 {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 56px;
+    z-index: 1030;
+}
