instalacion de paguetes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,9 +7,9 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active" style="background-image:url('https://material.angular.io/assets/img/examples/shiba2.jpg')"></div>
-        <div class="carousel-item" style="background-image:url('https://material.angular.io/assets/img/examples/shiba2.jpg')"></div>
-        <div class="carousel-item" style="background-image:url('https://material.angular.io/assets/img/examples/shiba2.jpg')"></div>
+        <div class="carousel-item active" style="background-image:url('../assets/img/macrobiotica-girasoles.jpg')"></div>
+        <div class="carousel-item" style="background-image:url('../assets/img/oh_lala_lashes.jpg')"></div>
+        <div class="carousel-item" style="background-image:url('../assets/img/ticaflor_modificado.jpg')"></div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -80,10 +80,11 @@
         <p>Tel. 6060-2525</p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-button>Me gusta
+        <button mat-button>Me interesa
 <mat-icon matBadge="230" matBadgeColor="warn"></mat-icon>
         </button>
-        <button mat-button>Comprar</button>
+        <button mat-button class=“loud-link-click” data-sound="assets/audio/Error.mp3">Lo compro</button>
+
     </mat-card-actions>
     <hr>
 </mat-card>
@@ -106,10 +107,10 @@
         <p>Tel. 2530-6546</p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-button>Me gusta
+        <button mat-button>Me interesa
       <mat-icon matBadge="38" matBadgeColor="warn"></mat-icon>
     </button>
-        <button mat-button>Comprar</button>
+        <button mat-button>Lo compro</button>
     </mat-card-actions>
     <hr>
 </mat-card>
