--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-bottom">
 
-    <a class="navbar-brand " href="#">
-        <mat-icon>message</mat-icon>
+    <a class="navbar-brand " [routerLink]="['empleo']">
+        <mat-icon matBadge="7" matBadgeColor="warn">find_in_page</mat-icon>
     </a>
 
-    <a class="navbar-brand " href="#">
+    <a class="navbar-brand " [routerLink]="['otrosServicios']">
         <mat-icon>list_alt</mat-icon>
     </a>
 
-    <a class="navbar-brand " href="#">
+    <a class="navbar-brand " [routerLink]="['home']">
         <mat-icon>home</mat-icon>
     </a>
 
-    <a class="navbar-brand " href="#">
+    <a class="navbar-brand " [routerLink]="['bienesRaices']">
         <mat-icon>business</mat-icon>
     </a>
 
-    <a class="navbar-brand " href="#">
+    <a class="navbar-brand " [routerLink]="['carros']">
         <mat-icon>commute</mat-icon>
     </a>
 
