--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <app-navbar></app-navbar>
 
-<app-home></app-home>
+
+<div>
+    <router-outlet></router-outlet>
+</div>
+
+
+<!-- <app-home></app-home> -->
 
 <app-footer></app-footer>
