--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -61,6 +61,15 @@
 
                 </div>
             </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['login']">Login</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['registro']">Registrarse</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link">Salir</a>
+            </li>
             <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#">Disabled</a>
             </li> -->
